bad-sample/src/main/java/com/andrewreitz/bad/sample/Test.java
package com.andrewreitz.bad.sample;

import com.andrewreitz.bad.Bad;

public class Test {
  @Bad
  int testing;

  @Bad
  public Test() {

  }
}
